<resources>
    <string name="app_name">InvoiceAndroidApp</string>
    <string name="client_name">Client Name</string>
    <string name="inr">INR. 000</string>
    <string name="date">2024-31-01</string>
    <string name="client">CLIENT</string>
    <string name="textview">TextView</string>
    <string name="amount">AMOUNT</string>
    <string name="textview1">TextView</string>
    <string name="invoice_date">INVOICE DATE</string>
    <string name="single_invoice_date">2024-10-09</string>
    <string name="description">DESCRIPTION</string>
    <string name="delete">DELETE</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount_edit_invoice">AMOUNT</string>
    <string name="edit_client_name">Client Name</string>
    <string name="edit_client">CLIENT</string>
    <string name="select">Select</string>
    <string name="edit_description">DESCRIPTION</string>
    <string name="edit">EDIT</string>
    <string name="add_description">DESCRIPTION</string>
    <string name="add_client">CLIENT</string>
    <string name="add_client_name">Client Name</string>
    <string name="add_amount">AMOUNT</string>
    <string name="add_enter_amount">Enter Amount</string>
    <string name="add_date">DATE</string>
    <string name="add_select">Select</string>
    <string name="add_create">CREATE</string>
    <string name="edit_date">DATE</string>
    <string name="list_item">List_item</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="btn_login">LOGIN</string>
    <string name="this_is_for_calender">this is for calender</string>
    <string name="for_client_name">for client name</string>
    <string name="enter_client_name">enter client name</string>
    <string name="enter_description">enter description</string>
    <string name="edit_description_1">edit description</string>
    <string name="login_password">password</string>
    <string name="login_username">Username</string>
    <string name="create_new_n_account">Create New \n Account</string>
    <string name="register_now">Register Now</string>
    <string name="sign_up_USERNAME">USERNAME</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="email">EMAIL</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="signup_password">PASSWORD</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="reenter_password">Reenter password</string>
    <string name="sign_up">Sign Up</string>
</resources>